# kirigami

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .qdocconf  CMakeLists.txt  KF5Kirigami2Config.cmake.in  KF5Kirigami2Macros.cmake  KF6Kirigami2Config.cmake.in  KF6Kirigami2Macros.cmake  KF6KirigamiMacros.cmake  Mainpage.dox  README.md  kirigami.pri  kirigami.qbs  kirigami.qdoc  kirigami.qdocconf  kirigami.qrc  kirigami.qrc.in  metainfo.yaml  qmllint.ini.in
autotests/: AppItemComponent.qml  BasicListItem_ToolTip_Test.qml  CMakeLists.txt  qmltest.cpp  sharedqmlenginetest.cpp  tst_ImageColors.qml  tst_actionext.qml  tst_actiontoolbar.qml  tst_avatar.qml  tst_basiclistitem_tooltip.qml  tst_card.qml  tst_colorutils.qml  tst_columnview.qml  tst_formlayout.qml  tst_globaldrawer.qml  tst_headerfooterlayout.qml  tst_icon.qml  tst_inlinemessage.qml  tst_keynavigation.qml  tst_listskeynavigation.qml  tst_menudialog.qml  tst_mnemonicdata.qml  tst_navigationtabbar.qml  tst_overlaysheet.qml  tst_pagerouter.qml  tst_pagerow.qml  tst_placeholdermessage.qml  tst_routerwindow.qml  tst_sceneposition.qml  tst_scrollhandler.qml  tst_sizegroup.qml  tst_theme.qml  tst_typeshelper.qml
autotests/delegates/: SectionHeader_Test.qml  tst_SectionHeader.qml
autotests/pagepool/: TestPage.qml  tst_layers.qml  tst_pagepool.qml
autotests/wheelhandler/: ContentFlickable.qml  ScrollableFlickable.qml  tst_filterMouseEvents.qml  tst_invokables.qml  tst_onWheel.qml  tst_scrolling.qml
examples/applicationitemapp/: CMakeLists.txt  main.cpp  main.qml
src/: CMakeLists.txt  KF5Kirigami2-android-dependencies.xml  KF6Kirigami2-android-dependencies.xml  _init.cpp  actionextattached.cpp  actionextattached.h  actionhelper.cpp  actionhelper.h  avatar.cpp  avatar.h  colorutils.cpp  colorutils.h  columnview.cpp  columnview.h  columnview_p.h  contextmenuattached.cpp  contextmenuattached.h  copyhelper.cpp  copyhelper.h  copyinterceptor.cpp  copyinterceptor.h  copyinterceptor_p.h  delegaterecycler.cpp  delegaterecycler.h  enums.cpp  enums.h  formfactorinfoattached.cpp  formfactorinfoattached.h  formlayoutattached.cpp  formlayoutattached.h  headerfooterlayout.cpp  headerfooterlayout.h  icon.cpp  icon.h  imagecolors.cpp  imagecolors.h  index.qdoc  inputmethod.cpp  inputmethod.h  kirigami-index.qdoc  (+41 more)
src/controls/: AboutItem.qml  AboutPage.qml  AbstractApplicationHeader.qml  AbstractApplicationItem.qml  AbstractApplicationWindow.qml  AbstractCard.qml  AbstractChip.qml  AbstractItemViewHeader.qml  AbstractListItem.qml  Action.qml  ActionTextField.qml  ActionToolBar.qml  ApplicationHeader.qml  ApplicationItem.qml  ApplicationWindow.qml  Avatar.qml  BasicListItem.qml  Card.qml  CardsGridView.qml  CardsLayout.qml  CardsListView.qml  CheckableListItem.qml  Chip.qml  ContextDrawer.qml  ContextualHelpButton.qml  DesktopDialog.qml  Dialog.qml  FlexColumn.qml  FloatingActionButton.qml  FormLayout.qml  FormLayoutPage.qml  GlobalDrawer.qml  Heading.qml  Hero.qml  IconTitleSubtitle.qml  InlineMessage.qml  InlineViewHeader.qml  ItemViewHeader.qml  Label.qml  LinkButton.qml  (+35 more)
src/controls/private/: ActionButton.qml  ActionIconGroup.qml  ActionMenuItem.qml  ActionsMenu.qml  BannerImage.qml  CardsGridViewPrivate.qml  CardsListViewPrivate.qml  ContextDrawerActionItem.qml  CornerShadow.qml  DefaultCardBackground.qml  DefaultChipBackground.qml  DefaultListItemBackground.qml  DefaultPageTitleDelegate.qml  EdgeShadow.qml  GlobalDrawerActionItem.qml  PageActionPropertyGroup.qml  PrivateActionToolButton.qml  PullDownIndicator.qml  RefreshableScrollView.qml  SwipeItemEventFilter.qml  SystemDialogButton.qml
src/controls/settingscomponents/: CategorizedSettings.qml  GenericSettingsPage.qml  SettingAction.qml
src/controls/swipenavigator/: PageTab.qml  PrivateSwipeHighlight.qml  PrivateSwipeProgress.qml  PrivateSwipeStack.qml  PrivateSwipeTab.qml  PrivateSwipeTabBar.qml  SwipeNavigator.qml  TabViewLayout.qml
src/controls/systemdialogs/: DesktopSystemDialog.qml  MobileSystemDialog.qml  SystemDialog.qml
src/delegates/: CMakeLists.txt  CheckSubtitleDelegate.qml  IconTitleSubtitle.qml  RadioSubtitleDelegate.qml  SubtitleDelegate.qml  SwitchSubtitleDelegate.qml  TitleSubtitle.qml
src/dialogs/: CMakeLists.txt  Dialog.qml  MenuDialog.qml  PromptDialog.qml  ScrollableDialog.qml  SearchDialog.qml
src/layouts/: CMakeLists.txt  FormLayout.qml  columnview.cpp  columnview.h  displayhint.h  formlayoutattached.h  headerfooterlayout.h  padding.h  sizegroup.h  toolbarlayout.cpp  toolbarlayout.h
src/libkirigami/: CMakeLists.txt  animation.cpp  animation.h  basictheme.cpp  basictheme_p.h  compatheader.h.in  formfactorinfo.cpp  formfactorinfo.h  kirigamipluginfactory.cpp  kirigamipluginfactory.h  org.freedesktop.impl.portal.Settings.xml  org.kde.KWin.VirtualKeyboard.xml  platformtheme.cpp  platformtheme.h  sharedqmlengine.cpp  sharedqmlengine.h  styleselector.cpp  styleselector_p.h  tabletmodewatcher.cpp  tabletmodewatcher.h  units.cpp  units.h  virtualkeyboardwatcher.cpp  virtualkeyboardwatcher.h
src/platform/: CMakeLists.txt  KF6KirigamiPlatformConfig.cmake.in  basictheme.cpp  basictheme_p.h  colorutils.h  inputmethod.h  kirigamiplatform.qdoc  kirigamiplatform.qdocconf  platformpluginfactory.cpp  platformpluginfactory.h  platformtheme.cpp  platformtheme.h  settings.cpp  settings.h  smoothscrollwatcher.h  styleselector.cpp  styleselector.h  tabletmodewatcher.cpp  tabletmodewatcher.h  units.cpp  units.h  virtualkeyboardwatcher.cpp  virtualkeyboardwatcher.h
src/primitives/: CMakeLists.txt  Separator.qml  ShadowedImage.qml  icon.cpp  icon.h  shadowedrectangle.h  shadowedtexture.h
src/scenegraph/: managedtexturenode.cpp  managedtexturenode.h  paintedrectangleitem.cpp  shadowedborderrectanglematerial.cpp  shadowedborderrectanglematerial.h  shadowedbordertexturematerial.cpp  shadowedbordertexturematerial.h  shadowedrectanglematerial.cpp  shadowedrectanglematerial.h  shadowedrectanglenode.cpp  shadowedtexturematerial.cpp  shadowedtexturematerial.h  shadowedtexturenode.cpp
templates/kirigami6/: CMakeLists.txt  kirigami.kdevtemplate
(+314 files in other folders)
